# exploration_node

./: CMakeLists.txt  InRoom.m  ROOM_plane.m  Rfind_sobni.m  crtaj.m  crtajgridmapuiskocne.m  crtajnum.m  crtajnump.m  crtajpoligon.m  crtajpoligonee.m  crtajpoligoniput.m  data  globpolygon.m  globskocni.m  globskocniprijebrisanja.m  karta.m  lokpolygon.m  novipoligon.m  package.xml  package.xml~  poligon.m  posunija.m  potglobskocni.m  prijeunija.m  pusi.m.txt~  pusi.txt  pusi.txt~  pusi_room.txt  pusi_room.txt~  readme_exploration  rosdep.yaml  skocni.m  skripta.m  skriptalok.m  soba.m  sobaMatlab.m  staripoligon.m  stariskocni.m  stvarni.m  temp.mat  (+2 more)
3dtk_scan/: scan000.pose  scan001.pose  scan0010.pose  scan0011.pose  scan0012.pose  scan0013.pose  scan0014.pose  scan0015.pose  scan0016.pose  scan0017.pose  scan0018.pose  scan0019.pose  scan002.pose  scan003.pose  scan004.pose  scan005.pose  scan006.pose  scan007.pose  scan008.pose  scan009.pose
Nocitanja/: crtajpoligon.m  crtajpoligon.m~  crtajpoligonclanak.m  crtpodatke.m  crtpodatke.m~  globskocni0  globskocni1  globskocni10  globskocni100  globskocni101  globskocni102  globskocni103  globskocni104  globskocni105  globskocni106  globskocni107  globskocni108  globskocni109  globskocni11  globskocni110  globskocni111  globskocni112  globskocni113  globskocni114  globskocni115  globskocni116  globskocni12  globskocni13  globskocni14  globskocni15  globskocni16  globskocni17  globskocni18  globskocni19  globskocni2  globskocni24  globskocni3  globskocni34  globskocni35  globskocni36  (+862 more)
df/: scan0.pose  scan1.pose  (+18 more)
(+37 files in other folders)
